@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2007-2008 by Ivan Y. Khvostishkov                       *
+ *   Copyright (C) 2007-2009 by Ivan Y. Khvostishkov                       *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -44,6 +44,13 @@
 		{
 			$this->proto = $proto;
 			
+			return $this;
+		}
+
+		public function ofAutoProto(AbstractProtoClass $proto)
+		{
+			$this->proto = $proto;
+
 			return $this;
 		}
 		
